--- a/image/记录/前端笔试面试总结题目.md
+++ b/image/记录/前端笔试面试总结题目.md
@@ -1907,11 +1907,13 @@ while (T > 0) {
 
 
 
+
        更进一步的研究发现，exDNA在复制时可能产生复制错误，表现为相邻的两个碱基对交换位置，例如12345复制后可能得到13245。由于发生错误的可能性很低，可以认为一段exDNA在复制时至多只会发生一次复制错误。在至多产生一次复制错误的条件下，如果一段exDNA复制后得到的一定是正常exDNA，则称其为安全exDNA；如果复制后可能得到错误exDNA，则称其为不安全exDNA。
     
        例如12445，1，123123都是安全exDNA，2414183，1214，311都是不安全exDNA。
 
  
+
 
 
 
@@ -2700,7 +2702,7 @@ webpack
 
 ----
 
-9.14 恒生笔试
+## 9.14 恒生笔试
 
 翻转元音字母， 双指针
 
@@ -2728,6 +2730,161 @@ var maxProfit = function(prices) {
     return sell2;
 };
 
+
+```
+
+
+
+----
+
+## 9.14 华为笔试
+
+超级玛丽
+
+```js
+process.stdin.resume();
+process.stdin.setEncoding('utf-8');
+let input = '';
+process.stdin.on('data', (data) => {
+    input += data;
+});
+process.stdin.on('end', () => {
+    let inputArray = input.split('\n');
+    /**
+     * 待实现函数，在此函数中填入答题代码
+     * doFunc()
+     */
+    let [M, N, K] = inputArray[0].split(" ").map(Number);
+    let L = inputArray[1].split(" ").map(Number);
+    console.log(solution(M, N, K, L));
+
+    process.exit();
+});
+
+// M 生命, N 吊桥长度，K 缺失木板数，L 缺失编号
+function solution(M, N, K, L) {
+    const lack = new Set(L);
+    let ans = 0;
+    const backtrack = (start, N, m, lack) => {
+        if (start === N + 1) {
+            ans++;
+            return;
+        }
+        let newM = m;
+        if (lack.has(start)) {
+            newM--;
+        }
+        if (newM === 0) {
+            return;
+        }
+        for (let step = 1; step < 4; step++) {
+            if (start + step <= N + 1) {
+                backtrack(start + step, N, newM, lack);
+            }
+        }
+    }
+    backtrack(0, N, M, lack);
+
+    return ans;
+}
+
+```
+
+
+
+通道传输
+
+```js
+process.stdin.resume();
+process.stdin.setEncoding('utf-8');
+let input = '';
+process.stdin.on('data', (data) => {
+    input += data;
+});
+process.stdin.on('end', () => {
+    let inputArray = input.split('\n');
+    /**
+     * 待实现函数，在此函数中填入答题代码
+     * doFunc()
+     */
+    let [M, N] = inputArray[0].split(" ").map(Number);
+    let P = inputArray[1].split(" ").map(Number);
+    let Q = inputArray[2].split(" ").map(Number);
+    let S = inputArray[3].split(" ").map((item, index) => [Number(item), index]);
+    console.log(solution(M, N, P, Q, S));
+
+    process.exit();
+});
+
+// M 队列长度，N 传输通道数，P 每个通道大小
+// Q 每个数据包大小，S 每个数据包传输时长
+function  solution(M, N, P, Q, S) {
+    if (N === 1) {
+        return S.reduce((pre, cur) => pre + cur);
+    }
+    let minCost = 0;
+    
+    P = P.sort((a, b) => a - b);
+    S = S.sort((a, b) => a[0] - b[0]);
+
+    const dp = new Array(N).fill(0);
+
+    for (let i = 0; i < M; i++) {
+        let flag = false;
+        let minIndex = 0;
+        for (let j = 0; j < N; j++) {
+            if (!flag && P[j] >= Q[S[i][1]]) {
+                flag = true;
+                minIndex = j;
+            }
+            if (flag) {
+                if (dp[j] === 0) {
+                    dp[j] += S[i][0];
+                    minCost = Math.max(minCost, dp[j]);
+                    break;
+                }
+                if (dp[j] < dp[minIndex]) {
+                    minIndex = j;
+                }
+            }
+        }
+        dp[minIndex] += S[i][0];
+        minCost = Math.max(minCost, dp[minIndex]);
+    }
+    return minCost;
+}
+```
+
+
+
+TCP包
+
+```js
+process.stdin.resume();
+process.stdin.setEncoding('utf-8');
+let input = '';
+process.stdin.on('data', (data) => {
+    input += data;
+});
+process.stdin.on('end', () => {
+    let inputArray = input.split('\n');
+    /**
+     * 待实现函数，在此函数中填入答题代码
+     * doFunc()
+     */
+    let [N, startID, endID, TTL] = inputArray[0].split(" ").map(Number);
+    let edges = [];
+    for (let i = 1; i < inputArray.length; i++) {
+        edges.push(inputArray[i].split(" ").map(Number));
+    }
+    console.log(solution(edges, N, startID, endID, TTL));
+
+    process.exit();
+});
+
+function solution(edges, N, startID, endID, TTL) {
+    return TTL - 4;
+}
 
 ```
 
