--- a/开发工具/谷歌插件开发.md
+++ b/开发工具/谷歌插件开发.md
@@ -103,11 +103,269 @@ function saveTabData(tab, data) { if (tab.incognito) { bgPage[tab.url] = data; /
 
 ----
 
+## Chrome Extension的组成
+
+MV3 有多个[新增特性](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.chrome.com%2Fdocs%2Fextensions%2Fmv3%2Fintro%2Fmv3-overview%2F%23feature-summary)，常用功能的变动如下：
+
+- 使用 Service workers 替代了后台页面 background pages
+
+  后台脚本运行在 Service workers 环境中，其工作方式是基于监听-响应的模式的，它不会常驻后台可以提升性能；但由于运行环境没有后台页面，因此**无法**使用与 DOM 相关的 API。
+
+- **不**再支持从外部服务器（一般是 CDN）获取代码，如 JavaScript 脚本或 Wasm 文件
+
+  扩展程序只能执行在应用内部的脚本，以提高安全性。如果扩展程序需要依赖外部数据，推荐以配置参数文件的形式进行传递。
+
+- 很多 API 都支持 Promise
+
+  对于异步方法现在可以使用 promise 链或 async/await 进行操作。传统以回调函数的方式处理异步方法，也依然支持（为了兼容性，但是异步方法就不会返回 promise），对于一些场景，例如事件监听，还需要设置回调函数（作为事件处理函数）。
+
+- 统一的 Action API
+
+  全局的图标交互控件 Browser Action 和特定页面的图标交互控件 Page Action 合并为 Action API
+
+💡 未来还会加入更多新的特性：
+
+- 内容脚本 content scripts 支持在运行时才[动态注册并植入](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.chrome.com%2Fdocs%2Fextensions%2Fmv3%2Fcontent_scripts%2F%23programmatic)
+- 提供一个新的 API [获取网页的图标 favicons](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.chrome.com%2Fdocs%2Fextensions%2Freference%2Ftabs%2F%23type-Tab)，以替代 `chrome://favicons`
+- Storage API 提供一个新的 [StorageArea 类型](https://link.juejin.cn?target=https%3A%2F%2Fdeveloper.chrome.com%2Fdocs%2Fextensions%2Freference%2Fstorage%2F%23type-StorageArea)，以允许将数据存储在内存中，便于 service worker 重启时快速读取
+
+
+
+
+1. manifest.json （插件配置文件）
+2. popup (点击插件图标弹出的页面)
+3. content script (插入到目标页面中执行的js)
+4. background script (在chrome后台中运行的程序)
+
+### manifest.json
+
+manifest.json必须放在插件项目根目录，里面包含了插件的各种配置信息，其中也包括了popup、content script、background script等路径。
+
+chrome 插件的核心之一是一个 `manifest.json` 文件，这个文件是 chrome 插件的配置清单，chrome 浏览器通过读取插件的配置清单来获取插件的详细信息，同时为插件开放相应的 api 能力。
+
+```
+{
+  "name": "Hello Chrome Extensions",
+  "version": "1.0",
+  "manifest_version": 3
+}
+```
+
+### popup
+
+作为一个独立的弹出页面，有自己的html、css、js，可以按照常规项目来开发。
+
+被添加到 chrome 浏览器的插件都可以被固定在浏览器的右上角，有一个小图标，在点击图标的时候，会呼出一个页面，这个页面就是 `popup` 页面。它是一个临时存在的小窗口，用户可以通过页面内提供的配置项对插件进行简单的配置。
+
+`popup` 页面和我们普通开发的页面一样，开发者可以开发任意的样式和功能。需要注意的是，这个页面的生命周期很短，只要被关闭了就会被销毁，所以需要长期运行的代码不能在 `popup` 页面相关的 `js` 中编写。
+
+```
+{
+    "action": {
+        "default_popup": "popup.html"
+    },
+}
+```
+
+### content script
+
+content script是驻入到目标页面中执行的js脚本，可以获取目标页面的Dom并进行修改。但是，content script的JavaScript与目标页面是互相隔离的。也就是说，content script与目标页面不会出现互相污染的问题，同时，也不能调用对方的方法。
+
+> 注意，以上只是js作用域的隔离，通过content script向目标页面加入的DOM会是可以使用目标页面的css，从而造成css互相污染。
+
+`content_scripts` 是可以被注入到我们访问的页面中的脚本，可以是 `js` 和 `css` 文件，它们可以读取浏览器访问的网页的详细信息，对其进行更改，并将信息通过事件的形式与 `background` 通信。
+
+我们常见的一些插件，如：广告屏蔽、页面翻译等插件，就是利用了 `content_scripts` 的能力。
+
+在 `manifest.json` 中，可以通过如下配置来注册 `content_scripts`：
+
+```
+{
+    "content_scripts": [{
+        "matches": ["<all_urls>"],
+        "js": ["inject.js"],
+        "run_at": "document_start"
+      }],
+}
+```
+
+### background script
+
+background script 常驻在浏览器后台运行，没有实际页面（当然也可以通过manifest.json指定一个页面，如果不设置，chrome会自动生成一个），它的生命周期随着浏览器打开而开始，随着浏览器关闭而结束。一般把全局的、需要一直运行的代码放在这里。重要的是，background script的权限非常高，除了可以调用几乎所有Chrome Extension API外，还可以跨域发请求。
+
+`background` 是一个会常驻运行在 chrome 后台的脚本，它不会因为页面的关闭而被销毁，只要浏览器没有被关闭且插件没有被禁用，那么这个插件的 `background` 就会一直在后台运行。
+
+`backgroung` 可以在后台监听浏览器事件，根据开发者和用户的配置来对不同的事件作出不同的响应。
+
+```
+{
+    "background": {
+        "service_worker": "background.js"
+    },
+}
+```
+
+
+
+```json
+{
+  "name": "Chrome插件Demo",
+  "version": "1.0",
+  "description": "React开发chrome插件Demo。",
+  // 图标，图省事的话，所有尺寸都用一个图也行
+  "icons": {
+    "16": "images/icon.png",
+    "48": "images/icon.png",
+    "128": "images/icon.png"
+  },
+  // manifest.json的文件版本，必须是2
+  "manifest_version": 2,
+  // popup页面配置
+  "page_action": {
+    // 浏览器插件按钮的图标
+    "default_icon": "images/icon.png",
+    // 浏览器插件按钮hover显示的文字
+    "default_title": "React CRX",
+    // popup页面的路径（根目录为最终build生成的插件包目录）
+    "default_popup": "index.html"
+  },
+  // background script配置
+  "background": {
+    // background script路径（根目录为最终build生成的插件包目录）
+    "scripts": [
+      "static/js/background.js"
+    ],
+    // 官方强烈建议这里为false，乖乖写就行了
+    "persistent": false
+  },
+  // content script配置
+  "content_scripts": [
+    {
+      // 应用于哪些页面地址（可以使用正则，<all_urls>表示匹配所有地址）
+      "matches": [
+        "<all_urls>"
+      ],
+      // 注入的css，注意不要污染样式
+      "css": [
+        "static/css/content.css"
+      ],
+      // 注入的js
+      "js": [
+        "static/js/content.js"
+      ],
+      // 代码注入的时间，可选document_start、document_end、document_idle（默认）
+      "run_at": "document_end"
+    }
+  ],
+  // 权限申请（需要background发起跨域请求的url也放在这里）
+  "permissions": [
+    // 标签
+    "tabs",
+    // 根据定制的网页规则，采取相应的措施（例如只在baidu.com启动组件）
+    "declarativeContent",
+    // 插件本地存储
+    "storage",
+    // 通知
+    "notifications"
+  ],
+  // 如果向目标页面插入js，需要在这里声明下才能获得执行的权限
+  "web_accessible_resources": ["insert.js"]
+}
+```
+
+### permissions
+
+chrome 插件可以调用 chrome 浏览器开放的 api 对浏览器的能力进行增强，一些基础的 api 无需指定权限即可使用，但是一些比较高级的 api 是需要在 `permissions` 中进行指定，才能使用。
+
+一些常用的 `permissions` 如：
+
+•storage：可以使用 chrome 的文件系统来保存数据的 api；•proxy: 可以使用对请求进行代理的 api；•declarativeNetRequest: 可以使用通过指定声明性规则来阻止或修改网络请求的 api;
+
+在 `manifest.json` 中，可以这样配置：
+
+```
+{
+    "permissions": [
+        "proxy",
+        "storage",
+        "declarativeNetRequest",
+    ],
+}
+```
+
+
+
+
+
+----
+
 # 改变浏览器外观
 
+用 browser actions 可以在chrome主工具条的地址栏右侧增加一个图标。作为这个图标的延展，一个browser action图标还可以有[tooltip](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#tooltip)、[badge](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#badge)和[popup](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#popups)。
 
+如果你想创建一个不总是可见的图标, 可以使用[page action](https://wizardforcel.gitbooks.io/chrome-doc/content/pageAction.html)来代替browser action.
 
+**注意:**Packaged apps 不能使用browser actions.
 
+## Manifest
+
+在[extension manifest](https://wizardforcel.gitbooks.io/chrome-doc/content/manifest.html)中用下面的方式注册你的browser action:
+
+```js
+{
+  "name": "My extension",
+  ...
+  "browser_action": {
+    "default_icon": "images/icon19.png", _// optional_ 
+    "default_title": "Google Mail",      _// optional; shown in tooltip_ 
+    "default_popup": "popup.html"        _// optional_ 
+  },
+  ...
+}
+```
+
+## UI的组成部分
+
+一个 browser action 可以拥有一个[图标](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#icon)，一个[tooltip](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#tooltip)，一个[badge](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#badge)和一个[popup](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#popups)。
+
+### 图标
+
+Browser action 图标推荐使用宽高都为19像素，更大的图标会被缩小。
+
+你可以用两种方式来设置图标: 使用一个静态图片或者使用HTML5[canvas element](http://www.whatwg.org/specs/web-apps/current-work/multipage/the-canvas-element.html)。 使用静态图片适用于简单的应用程序，你也可以创建诸如平滑的动画之类更丰富的动态UI(如canvas element)。
+
+静态图片可以是任意WebKit支持的格式，包括 BMP，GIF，ICO，JPEG或 PNG。
+
+修改**browser_action**的[manifest](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#manifest)中 **default_icon**字段，或者调用[setIcon()](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#method-setIcon)方法。
+
+### ToolTip
+
+修改**browser_action**的[manifest](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#manifest)中**default_title**字段，或者调用[setTitle()](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#method-setTitle)方法。你可以为**default_title**字段指定本地化的字符串；点击[Internationalization](https://wizardforcel.gitbooks.io/chrome-doc/content/i18n.html)查看详情。
+
+### Badge
+
+Browser actions可以选择性的显示一个*badge*— 在图标上显示一些文本。Badges 可以很简单的为browser action更新一些小的扩展状态提示信息。
+
+因为badge空间有限，所以只支持4个以下的字符。
+
+设置badge文字和颜色可以分别使用[setBadgeText()](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#method-setBadgeText)and[setBadgeBackgroundColor()](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#method-setBadgeBackgroundColor)。
+
+### Popup
+
+如果browser action拥有一个popup，popup 会在用户点击图标后出现。popup 可以包含任意你想要的HTML内容，并且会自适应大小。
+
+在你的browser action中添加一个popup，创建弹出的内容的HTML文件。 修改**browser_action**的[manifest](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#manifest)中**default_popup**字段来指定HTML文件， 或者调用[setPopup()](https://wizardforcel.gitbooks.io/chrome-doc/content/browserAction.html#method-setPopup)方法。
+
+## Tips
+
+为了获得最佳的显示效果, 请遵循以下原则：
+
+- **确认** Browser actions 只使用在大多数网站都有功能需求的场景下。
+- **确认** Browser actions 没有使用在少数网页才有功能的场景， 此场景请使用[page actions](https://wizardforcel.gitbooks.io/chrome-doc/content/pageAction.html)。
+- **确认**你的图标尺寸尽量占满19x19的像素空间。 Browser action 的图标应该看起来比page action的图标更大更重。
+- **不要**尝试模仿Google Chrome的扳手图标，在不同的themes下它们的表现可能出现问题,，并且扩展应该醒目些。
+- **尽量**使用alpha通道并且柔滑你的图标边缘，因为很多用户使用themes，你的图标应该在在各种背景下都表现不错。
+- **不要**不停的闪动你的图标，这很惹人反感。
 
 
 
@@ -121,7 +379,7 @@ function saveTabData(tab, data) { if (tab.incognito) { bgPage[tab.url] = data; /
 
 # 谷歌插件开发
 
-
+# 开发环境搭建实践
 
 ## 初始化项目
 
@@ -129,5 +387,167 @@ function saveTabData(tab, data) { if (tab.incognito) { bgPage[tab.url] = data; /
 create-react-app my-extension
 cd my-extension
 npm start
+
+npm run build
+
 ```
 
+最终理想的build目录应该接近下述形态：
+
+```
+├─ favicon.ico         <--这个没有也行，用不到
+├─ index.html          <--popup入口页面
+├─ insert.js           <--插入到目标页面执行的js（非必须，视业务需求而定，后面笔记会说到）
+├─ manifest.json       <--插件的配置文件
+├─ /static
+|  ├─ /css
+|  |  ├─ content.css   <--content页面样式（会与目标页面互相污染）
+|  |  └─ main.css      <--popup页面样式（不会与目标页面互相污染）
+|  ├─ /js
+|  |  ├─ background.js <--background script
+|  |  ├─ content.js    <--content script
+|  |  └─ main.js       <--popup script
+|  └─ /media           <--项目的图片资源存放目录
+
+```
+
+上述包含了插件所需要的popup，content和background组成部分
+
+直接执行npm run ejcet来暴露[webpack](https://so.csdn.net/so/search?q=webpack&spm=1001.2101.3001.7020)的配置，后续需对webpack进行修改
+
+```bash
+npm run ejcet
+```
+
+
+
+```
+    ├─ /config              <--配置目录（由eject生成）
+    ├─ /public              <--popup入口页面
+    |  ├─ /images           <--图片目录
+    |  |  ├─ icon.png       <--插件图标
+    |  ├─ favicon.ico       <--这个没有也行，用不到
+    |  ├─ index.html        <--popup入口页面
+    |  ├─ insert.js         <--插入到目标页面执行的js（非必须，视业务需求而定）
+    |  ├─ manifest.json     <--插件的配置文件
+    ├─ /scripts             <--项目构建运行脚本（由eject生成）
+    ├─ /src                 <--开发目录
+    |  ├─ /api              <--API公用目录
+    |  |  ├─ index.js
+    |  ├─ /background       <--background script开发目录
+    |  |  ├─ index.js
+    |  ├─ /common           <--公用资源目录
+    |  |  ├─ /js            <--公用js目录
+    |  |  └─ /stylus        <--公用样式目录（本demo使用stylus）
+    |  ├─ /content          <--content script开发目录
+    |  |  ├─ /components    <--content 组件目录
+    |  |  ├─ /images        <--content 图片目录
+    |  |  ├─ content.styl   <--content 样式
+    |  |  └─ index.js       <--content script主文件
+    |  ├─ /popup            <--popup开发目录
+    |  |  ├─ /pages         <--popup 页面目录
+    |  |  ├─ /components    <--popup 组件目录
+    |  |  ├─ index.js       <--popup 主文件
+    |  ├─ index.js          <--项目主文件，也是popup入口文件
+    ├─ pakeage.json
+
+```
+
+## 修改webpack生成上述build目录
+
+插件开发并不像SPA应用一样一个入口就足够了，需要修改webpack的配置让其可以打包符合上述build目录要求的产物
+
+### 设置多入口
+
+为了让popup，background，content都拿打包对应的js文件文件，需要设置多入口，主要是修改entry字段
+
+我们来对config/webpack.config.js作如下修改：
+
+将原来的entry换成了对象，每个对象的key对应一个入口
+
+```json
+ entry: {
+      main: [
+        isEnvDevelopment &&
+        require.resolve('react-dev-utils/webpackHotDevClient'),
+        paths.appIndexJs,
+      ].filter(Boolean),
+      content: './src/content/index.js',
+      background: './src/background/index.js'
+    },
+```
+
+固定build生成的文件名
+因为manifest.json中配置引用的js文件名是固定的，所以我们需要保证每次打包的文件名不变（默认会加上hash值），主要的工作如下：
+
+去掉文件hash值，删除[contenthash:8]，共4处。（当然你也可以写一些工具尝试在打包阶段动态修改manifest.json文件，这样这个步骤就不需要了）
+由于是多入口，需要将static/js/bundle.js修改为static/js/[name].bundle.js。
+将runtimeChunk设置为false，否则build后还会多生成runtime-background.js、runtime-content.js、runtime-main.js。
+注释掉splitChunks，取消分包，否则会生成类似1.chunk.js、2.chunk.js等文件。
+继续修改上述webpack.config.js：
+
+```json
+// 大约206行
+ filename: isEnvProduction
+          ? 'static/js/[name].js'
+          : isEnvDevelopment && 'static/js/[name].bundle.js',
+
+// 大约214行
+chunkFilename: isEnvProduction
+          ? 'static/js/[name].chunk.js'
+          : isEnvDevelopment && 'static/js/[name].chunk.js',
+
+// 大约302行
+// chrome插件开发，取消分包机制
+      // splitChunks: {
+      //   chunks: 'all',
+      //   name: isEnvDevelopment,
+      // },
+...
+runtimeChunk: false
+
+// 大约642行
+new MiniCssExtractPlugin({
+        filename: 'static/css/[name].css',
+        chunkFilename: 'static/css/[name].chunk.css',
+      }),
+
+```
+
+### 设置popup不引入另外两个模块的js
+
+设置index.html只引入main.js，否则popup页面会把background/index.js和content/index.js也引入
+
+```json
+// 566行
+new HtmlWebpackPlugin(
+          Object.assign(
+              {},
+              {
+                inject: true,
+                // html只引入popup代码，chrome插件开发不能引入content和background的代码
+                chunks: ['main'],
+                template: paths.appHtml,
+              },
+              isEnvProduction
+                  ? {
+                    minify: {
+                      removeComments: true,
+                      collapseWhitespace: true,
+                      removeRedundantAttributes: true,
+                      useShortDoctype: true,
+                      removeEmptyAttributes: true,
+                      removeStyleLinkTypeAttributes: true,
+                      keepClosingSlash: true,
+                      minifyJS: true,
+                      minifyCSS: true,
+                      minifyURLs: true,
+                    },
+                  }
+                  : undefined
+          )
+      ),
+
+```
+
+以上基本完成了webpack的改造工作了
