--- a/面试学习题目/前端面试_22_业务场景.md
+++ b/面试学习题目/前端面试_22_业务场景.md
@@ -2562,5 +2562,195 @@ SELECT * FROM USER WHERE NAME LIKE '%蔡%' ORDER BY search_count DESC LIMIT 0,5;
 
 ----
 
-## localStorage或者sessionStorage怎么设计缓存的数据结构，如果数据量很大怎么查找
+## 怎么预防按钮的重复点击？
 
+先看看在那些场景会导致重复请求：
+
+1. 手速快，不小心双击操作按钮。
+2. 很小心的点击了一次按钮，因为请求响应比较慢，页面没有任何提示，怀疑上次点击没生效，再次点击操作按钮。
+3. 很小心的点击了一次按钮，因为请求响应比较慢，页面没有任何提示，刷新页面，再次点击操作按钮。
+
+我们可以对症下药：
+
+1. 控制按钮，在短时间内被多次点击，第一次以后的点击无效。
+2. 控制按钮，在点击按钮触发的请求响应之前，再次点击无效。
+3. 配置特殊的URL，然后控制这些URL请求的最小时间间隔。如果再次请求跟前一次请求间隔很小，弹窗二次提示，是否继续操作。
+
+### 防止无意识重复点击按钮
+
+给按钮添加控制，在`control` 毫秒内，第一次点击事件之后的点击事件不执行。
+
+```vue
+<template>
+    <button @click="handleClick"></button>
+</templage>
+<script>
+export default {
+    methods: {
+        handleClick(event) {
+            if (this.disabled) return;
+            if (this.notAllowed) return;
+            // 点击完多少秒不能继续点
+            this.notAllowed = true;
+            setTimeout(()=>{
+                this.notAllowed = false;
+            }, this.control)
+            this.$emit('click', event, this);
+        }
+    }
+}
+</script>
+```
+
+当然时间间隔可以设置，默认为300毫秒。我们无意识的重复点击一般在300毫秒以内。
+
+
+
+### 按钮点击立马禁用，等响应回来才能继续点击
+
+触发点击的button实例传入fetch配置，代码如下：
+
+```js
+doQuery: function (button) {
+    this.FesApi.fetch(`generalcard/query`, {
+        sub_card_type: this.query.sub_card_type,
+        code_type: this.query.code_type,
+        title: this.query.title,
+        card_id: this.query.card_id,
+        page_info: {
+            pageSize: this.paginationOption.page_info.pageSize,
+            currentPage: this.paginationOption.page_info.currentPage
+        }
+    }, {
+        //看这里，加上下面一行代码就行。。so easy
+        button: button
+    }).then(rst => {
+        // 成功处理
+    });
+}
+
+```
+
+在fetch函数内部，设置button的`disabled=true`，当响应回来时，设置`disabled=false`代码如下：
+
+```js
+const action = function (url, data, option) {
+    // 如果传了button
+    if (option.button) {
+        option.button.currentDisabled = true;
+    }
+    // 记录日志
+    const log = requsetLog.creatLog(url, data);
+
+    return param(url, data, option)
+        .then(success, fail)
+        .then((response) => {
+            requsetLog.changeLogStatus(log, 'success');
+            if (option && option.button) {
+                option.button.currentDisabled = false;
+            }
+            return response;
+        })
+        .catch((error) => {
+            requsetLog.changeLogStatus(log, 'fail');
+            if (option && option.button) {
+                option.button.currentDisabled = false;
+            }
+            error.message && window.Toast.error(error.message);
+            throw error;
+        });
+};
+
+```
+
+
+
+### 从根本入手，一招击杀
+
+当页面刷新，页面状态重置，此时再次点击按钮，会判定为初次点击，而且按钮状态恢复可点击。我们可以设置哪些请求地址是重要的，它们请求间隔不能过小。如果过小，页面弹出覆层询问用户时候继续执行。
+
+设置代码如下：
+
+```js
+this.FesApi.setImportant({
+    'generalcard/action': {
+        control: 10000,
+        message: '您在十秒内重复发起手工清算操作，是否继续？'
+    }
+})
+
+```
+
+而实现代码如下：
+
+```js
+api.fetch = function (url, data, option) {
+    if (requsetLog.importantApi[url]) {
+        const logs = requsetLog.getLogByURL(url, data);
+        if (logs.length > 0) {
+            const compareLog = logs[logs.length - 1];
+            if (compareLog.status === 'compare') {
+                requsetLog.creatLog(url, data, 'notAllowed');
+                return {
+                    then: () => {}
+                };
+            }
+            const importantApiOption = requsetLog.importantApi[url];
+            const control = importantApiOption.control || 10000;
+            const message = importantApiOption.message || util.format('fesMessages.importInterfaceTip', { s: control / 1000 });
+            if (new Date().getTime() - compareLog.timestamp < control) {
+                const oldStatus = compareLog.status;
+                requsetLog.changeLogStatus(compareLog, 'compare');
+                return new Promise(((resolve, reject) => {
+                    window.Message.confirm(util.format('fesMessages.tip'), message).then((index) => {
+                        if (compareLog.status === 'compare') {
+                            requsetLog.changeLogStatus(compareLog, oldStatus);
+                        }
+                        if (index === 0) {
+                            resolve(action(url, data, option));
+                        } else {
+                            reject(new Error('不允许相同操作间隔过小'));
+                        }
+                    });
+                }));
+            }
+            return action(url, data, option);
+        }
+        return action(url, data, option);
+    }
+    return action(url, data, option);
+};
+
+```
+
+攻击者可以绕过正常流程，模拟发起多次请求，所以仅仅在前端页面做好预防重复请求工作是不够的。后台接口需要设计得更健壮，具有幂等性。
+
+
+
+----
+
+## 怎么实现大型文件上传？
+
+大文件快速上传的方案，其实无非就是将 **文件变小**，也就是通过 **压缩文件资源** 或者 **文件资源分块** 后再上传。
+
+本文只介绍资源分块上传的方式，并且会通过 **前端（vue3 + vite）** 和 **服务端（nodejs + koa2）** 交互的方式，实现大文件分块上传的简单功能.
+
+问题 1：**谁负责资源分块？谁负责资源整合？**
+
+当然这个问题也很简单，肯定是前端负责分块，服务端负责整合.
+
+问题 2：**前端怎么对资源进行分块？**
+
+首先是选择上传的文件资源，接着就可以得到对应的文件对象 **File**，而 **File.prototype.slice** 方法可以实现资源的分块，当然也有人说是 **Blob.prototype.slice** 方法，因为 **`Blob.prototype.slice === File.prototype.slice`**.
+
+问题 3：**服务端怎么知道什么时候要整合资源？如何保证资源整合的有序性？**
+
+由于前端会将资源分块，然后单独发送请求，也就是说，原来 1 个文件对应 1 个上传请求，现在可能会变成 1 个文件对应 n 个上传请求，所以前端可以基于 Promise.all 将这多个接口整合，上传完成在发送一个合并的请求，通知服务端进行合并。
+
+合并时可通过 nodejs 中的读写流（readStream/writeStream），将所有切片的流通过管道（pipe）输入最终文件的流中。
+
+在发送请求资源时，前端会定好每个文件对应的序号，并将当前分块、序号以及文件 hash 等信息一起发送给服务端，服务端在进行合并时，通过序号进行依次合并即可。
+
+问题 4：**如果某个分块的上传请求失败了，怎么办？**
+
+一旦服务端某个上传请求失败，会返回当前分块失败的信息，其中会包含文件名称、文件 hash、分块大小以及分块序号等，前端拿到这些信息后可以进行重传，同时考虑此时是否需要将 Promise.all 替换为 Promise.allSettled 更方便.
