--- a/面试学习题目/前端面试_4_ES6部分.md
+++ b/面试学习题目/前端面试_4_ES6部分.md
@@ -1423,6 +1423,204 @@ new Foo(); // logs "Foo instantiated with new"
 
 
 
+---
+
+##  如何确保你的构造函数只能被new调用，而不能被普通调用？
+
+`JavaScript` 中的函数一般有两种使用方式:
+
+- 当作构造函数使用: `new Func()`
+- 当作普通函数使用: `Func()`
+
+但 `JavaScript` 内部并没有区分两者的方式，我们人为规定**构造函数名首字母要大写**作为区分。也就是说，构造函数被当成普通函数调用不会有报错提示。
+
+下面来举个栗子:
+
+```js
+// 定义构造函数 Person
+function Person(firstName, lastName) {
+    this.firstName = firstName;
+    this.lastName = lastName;
+    this.fullName = this.firstName + this.lastName;
+}
+// 使用 new 调用
+console.log(new Person("战场", "小包"));
+// 当作普通函数调用
+console.log(Person("战场", "小包"))
+```
+
+### 使用 instanceof 实现
+
+`instanceof` 运算符用于检测构造函数的 `prototype` 属性是否出现在某个实例对象的原型链上。
+
+我们可以使用 `instanceof` 检测某个对象是不是另一个对象的实例，例如 `new Person() instanceof Person --> true`
+
+**new 绑定/ 默认绑定**
+
+- 通过 `new` 来调用构造函数，会生成一个新对象，并且把这个新对象绑定为调用函数的 `this` 。
+- 如果普通调用函数，非严格模式 `this` 指向 `window`，严格模式指向 `undefined`
+
+```js
+function Test() {
+    console.log(this)
+}
+
+// Window {...}
+console.log(Test())
+// Test {}
+console.log(new Test())
+```
+
+使用 `new` 调用函数和普通调用函数最大的区别在于**函数内部 `this` 指向不同: `new` 调用后 `this` 指向实例，普通调用则会指向 `window`**。
+
+`instanceof` 可以检测某个对象是不是另一个对象的实例。如果为 `new` 调用， `this` 指向实例，**this instanceof 构造函数** 返回值为 `true` ，普通调用返回值为 `false`。
+
+```js
+function Person(firstName, lastName) {
+    // this instanceof Person
+    // 如果返回值为 false，说明为普通调用
+    // 返回类型错误信息——当前构造函数需要使用 new 调用
+    if (!(this instanceof Person)) {
+        throw new TypeError('Function constructor A cannot be invoked without "new"')
+    }
+    this.firstName = firstName;
+    this.lastName = lastName;
+    this.fullName = this.firstName + this.lastName;
+}
+// 当作普通函数调用
+// Uncaught TypeError: Function constructor A cannot be invoked without "new"
+console.log(Person("战场", "小包"));
+```
+
+通过输出结果，我们可以发现，定义的 `Person` 构造函数已经无法被普通调用了。撒花~~~
+
+但这种方案并不是完美的，存在一点小小的瑕疵。我们可以通过伪造实例的方法骗过构造函数里的判断。
+
+具体实现: `JavaScript` 提供的 `apply/call` 方法可以修改 `this` 指向，如果调用时将 `this` 指向修改为 `Person` 实例，就可以成功骗过上面的语法。
+
+```js
+// 输出结果 undefined
+console.log(Person.call(new Person(), "战场", "小包"));
+```
+
+
+
+### new.target
+
+`JavaScript` 官方也发现了这个让人棘手的问题，因此 `ES6` 中提供了 `new.target` 属性。
+
+《ECMAScript 6 入门》中讲到: `ES6` 为 `new` 命令引入了一个 `new.target` 属性，**该属性一般用在构造函数之中，返回 `new` 命令作用于的那个构造函数**。如果构造函数不是通过 `new` 命令或 `Reflect.construct()` 调用的，`new.target` 会返回 `undefined` ，**因此这个属性可以用来确定构造函数是怎么调用的**。
+
+`new.target` 就是为确定构造函数的调用方式而生的，太符合这个场景了，我们来试一下 `new.target` 的用法。
+
+```js
+function Person() {
+    console.log(new.target);
+}
+
+// new: Person {}
+console.log("new: ", new Person())
+// not new: undefined
+console.log("not new:", Person())
+```
+
+所以我们就可以使用 `new.target` 来非常简单的实现对构造函数的限制。
+
+```js
+function Person() {
+    if (!(new.target)) {
+        throw new TypeError('Function constructor A cannot be invoked without "new"')
+    }
+}
+// Uncaught TypeError: Function constructor A cannot be invoked without "new"
+console.log("not new:", Person())
+```
+
+
+
+### 使用ES6 Class
+
+类也具备限制构造函数只能用 `new` 调用的作用。
+
+`ES6` 提供 `Class` 作为构造函数的语法糖，来实现语义化更好的面向对象编程，并且对 `Class` 进行了规定：**类的构造器必须使用 new 来调用**。
+
+因此后续在进行面向对象编程时，强烈推荐使用 `ES6` 的 `Class`。 `Class` 修复了很多 `ES5` 面向对象编程的缺陷，例如类中的所有方法都是不可枚举的；类的所有方法都无法被当作构造函数使用等。
+
+```js
+class Person {
+    constructor (name) {
+        this.name = name;
+    }
+}
+// Uncaught TypeError: Class constructor Person cannot be invoked without 'new'
+console.log(Person())
+```
+
+本文介绍了三种限制构造函数只能被 `new` 调用的方案
+
+- 借助 `instanceof` 和 `new` 绑定的原理，适用于低版本浏览器
+- 借助 `new.target` 属性，可与 `class` 配合定义抽象类
+- 面向对象编程使用 `ES6 class`——最佳方案
+
+《ECMAScript 6 入门》中又讲到: **需要注意的是，子类继承父类时，`new.target`会返回子类**。继承中的 `new.target` 好像有不一样的花样
+
+```js
+class Animal {
+    constructor (type, name, age) {
+        this.type = type;
+        this.name = name;
+        this.age = age;
+        console.log(new.target)
+    }
+}
+// extends 是 Class 中实现继承的关键字
+class Dog extends Animal {
+    constructor(name, age) {
+        super("dog", "baobao", "1")
+    }
+}
+const dog = new Dog()
+```
+
+通过上面案例，我们可以发现子类调用和父类调用的返回结果是不同的，我们利用这个特性，就可以实现父类不可调用而子类可以调用的情况——面向对象中的**抽象类**
+
+### 抽象类实现
+
+什么是抽象类那？我们以动物世界为例。
+
+我们定义了一个动物类 `Animal`，并且通过这个类来创建动物，动物是个抽象概念，当你提到动物类时，你并不知道我会创建什么动物。只有将动物实体化，比如说猫，狗，猪啊，这才是具体的动物，并且每个动物的行为都会有所不同。因此我们不应该通过创建 `Animal` 实例来生成动物，`Animal` 只是动物抽象概念的集合。
+
+`Animal` 就是一个抽象类，我们不应该通过它来生成动物，而是通过它的子类，例如 `Dog、Cat` 等来生成对应的 `dog/cat` 实例。
+
+`new.target` 子类调用和父类调用的返回值是不同的，所以我们可以借助 `new.target` 实现抽象类
+
+> 抽象类也可以理解为不能独立使用、必须继承后才能使用的类。
+
+```js
+class Animal {
+    constructor (type, name, age) {
+        if (new.target === Animal) {
+            throw new TypeError("abstract class cannot new")
+        }
+        this.type = type;
+        this.name = name;
+        this.age = age;
+    }
+}
+// extends 是 Class 中实现继承的关键字
+class Dog extends Animal {
+    constructor(name, age) {
+        super("dog", "baobao", "1")
+    }
+}
+// Uncaught TypeError: abstract class cannot new
+const dog = new Animal("dog", "baobao", 18)
+```
+
+
+
+
+
 ----
 
 ## 请问你了解js模块化吗？
@@ -3006,6 +3204,63 @@ wm.get(key)
 
 
 
+----
+
+## Object与Map有什么区别？
+
+**概念**
+
+- Object
+
+在ECMAScript中，`Object`是一个特殊的对象。它本身是一个顶级对象，同时还是一个构造函数，可以通过它（如：`new Object()`）来创建一个对象。我们可以认为JavaScript中所有的对象都是`Object`的一个实例，对象可以用字面量的方法const obj = {}即可声明。
+
+- Map
+
+Map是Object的一个子类，可以有序保存任意类型的数据，使用键值对去存储，其中键可以存储任意类型，通过const m = new Map();即可得到一个map实例。
+
+**访问**
+
+map: 通过map.get(key)方法去属性, 不存在则返回undefined
+
+object: 通过obj.a或者obj['a']去访问一个属性, 不存在则返回undefined
+
+**赋值**
+
+map: 通过map.set去设置一个值，**key可以是任意类型**
+
+object: 通过object.a = 1或者object['a'] = 1，去赋值，**key只能是字符串，数字或symbol**
+
+**删除**
+
+map: **通过map.delete去删除一个值**，试图删除一个不存在的属性会返回false
+
+object:  **通过delete操作符才能删除对象的一个属性**，诡异的是，即使对象不存在该属性，删除也返回true，当然可以通过**Reflect.deleteProperty(target, prop)** 删除不存在的属性还是会返回true。
+
+```js
+var obj = {}; // undefined
+delete obj.a // true
+```
+
+**大小**
+
+map: 通过map.size即可快速获取到内部元素的总个数
+
+object: **需要通过Object.keys的转换才能将其转换为数组**，再通过数组的length方法去获得或者使用Reflect.ownKeys(obj)也可以获取到keys的集合
+
+**迭代**
+
+map: 拥有迭代器，可以通过for-of forEach去直接迭代元素，**切遍历顺序是确定的**
+
+object: 并没有实现迭代器，需要自行实现，不实现只能通过for-in循环去迭代，**遍历顺序是不确定的**
+
+**使用场景**
+
+1. 如果只需要简单的存储key-value的数据，并且key不需要存储复杂类型的，直接用对象
+2. **如果该对象必须通过JSON转换的，则只能用对象**，目前暂不支持Map
+3. map的阅读性更好，所有操作都是通过api形式去调用，更有编程体验
+
+
+
 
 
 ---
@@ -3948,6 +4203,36 @@ Promise.all([p1, p2, p3].map(p => p.catch(e => '出错后返回的值' )))
 使用 `Promise.allSettled` 替代 `Promise.all()`。
 
 > `Promise.allSettled()`方法返回一个promise，该promise在所有给定的promise已被解析或被拒绝后解析，并且每个对象都描述每个promise的结果。
+
+
+
+---
+
+##  promise.catch后面的.then还会执行吗？
+
+**会继续执行**。
+
+虽然**Promise**是开发过程中使用非常频繁的一个技术点，但是它的一些细节可能很多人都没有去关注过。我们都知道`.then`, `.catch`, `.finally`都可以链式调用，其本质上是因为返回了一个新的**Promise**实例。
+
+catch的语法形式如下：
+
+```js
+p.catch(onRejected);
+```
+
+`.catch`只会处理`rejected`的情况，并且也会返回一个新的`Promise`实例。
+
+`.catch(onRejected)`与`then(undefined, onRejected)`在表现上是一致的。
+
+**事实上，catch(onRejected)从内部调用了then(undefined, onRejected)。**
+
+- 如果`.catch(onRejected)`的`onRejected`回调中返回了一个状态为`rejected`的`Promise`实例，那么`.catch`返回的`Promise`实例的状态也将变成`rejected`。
+- 如果`.catch(onRejected)`的`onRejected`回调中抛出了异常，那么`.catch`返回的`Promise`实例的状态也将变成`rejected`。
+- 其他情况下，`.catch`返回的`Promise`实例的状态将是`fulfilled`。
+
+
+
+---
 
 
 
