--- a/面试学习题目/前端面试_9_计算机网络部分.md
+++ b/面试学习题目/前端面试_9_计算机网络部分.md
@@ -1599,7 +1599,7 @@ Expires **设置时间点**
 4. 参数类型：**post 的参数传递支持更多的数据类型**。
 5. get是明文传输，post是放在请求体中，**但是开发者可以通过抓包工具看到，也相当于是明文的。**
 6. 安全性：Get 请求可以将请求的参数放入 url 中向服务器发送，这样的做法相对于 Post 请求来说，一个方面是不太安全，因为请求的 url 会被保留在历史记录中。**get请求会保存在浏览器历史记录中**，还可能保存在web服务器的日志中
-7. 应用场景：GET 请求是一个**幂等**的请求，一般 Get 请求用于对服务器资源不会产生影响的场景，比如说**请求一个网页**。而 Post **不是一个幂等**的请求，一般用于对服务器资源会产生影响的情景。比如**注册用户**这一类的操作。
+7. **应用场景**：GET 请求是一个**幂等**的请求，一般 Get 请求用于对服务器资源不会产生影响的场景，比如说**请求一个网页**。而 Post **不是一个幂等**的请求，一般用于对服务器资源会产生影响的情景。比如**注册用户**这一类的操作。
 8. 是否缓存：因为不同的应用场景，所以浏览器**一般会对 Get 请求缓存**，但很少对 Post 请求缓存。
 9. 发送的报文格式：Get 请求的报文中实体部分为空，**Post 请求的报文中实体部分一般为向服务器发送的数据**。
 
